data/derived/comb/progs/unify/prog1665.ml.out
Characters 18-24:
  let _ = makeRand ((1, 2), 2);;
                    ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
